--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,6 @@
 // Home Content
-
 .home {
+  margin-top: 97px; //Use for fixed bar
 
   .intro {
 
