--- a/less/variables.less
+++ b/less/variables.less
@@ -2,6 +2,7 @@
 
 // Color pointers
 @nav-bg: @wild-sand;
+@nav-bg-opacity: @wild-sand-op;
 @nav-font: @river-bend;
 @nav-border: @sea-shell;
 
@@ -14,6 +15,7 @@
 
 // Color Vars
 @wild-sand: #F6F6F6;
+@wild-sand-op: rgba(245, 245, 245, 0.5);
 @river-bend: #454A59;
 @sea-shell: #F1F1F1;
 @ebony-clay: #23293B;
